networks.tf
// -----------------------------------------------------------------------------
//                                 Elastic IP                                  -
// -----------------------------------------------------------------------------

resource "aws_eip" "openvpn" {
  instance = aws_instance.openvpn.id
}

// -----------------------------------------------------------------------------
//                             Network and subnets                             -
// -----------------------------------------------------------------------------

resource "aws_vpc" "vpc" {
    cidr_block = var.vpc_cidr_block
    enable_dns_support   = true
    enable_dns_hostnames = true
    tags                 = {
        Name = var.vpc_name
    }
}

resource "aws_subnet" "pub_subnet" {
    vpc_id                  = aws_vpc.vpc.id
    cidr_block              = var.public_cidr_block
    map_public_ip_on_launch = true
    tags                    = {
        Name = var.public_subnet_name
    }
    depends_on = [aws_vpc.vpc]
}

resource "aws_internet_gateway" "internet_gateway" {
    vpc_id = aws_vpc.vpc.id
    depends_on = [aws_vpc.vpc]
    tags = {
        Name = " internel gateway for ${var.vpc_name}"
    }
}

resource "aws_route_table" "public" {
    vpc_id = aws_vpc.vpc.id
    route {
        cidr_block = var.route_table_cidr_block
        gateway_id = aws_internet_gateway.internet_gateway.id
    }
    tags = {
        Name = " route table for ${var.vpc_name}"
    }
}

resource "aws_route_table_association" "route_table_association" {
  subnet_id = aws_subnet.pub_subnet.id
  route_table_id = aws_route_table.public.id
}
